@@ -1,6 +1,9 @@
 === 0.4 ===
 2011-04-26  Aki Sasaki  <aki@mozilla.com>
 
+* mozharness/base/script.py (ShellMixin.get_output_from_command):
+    fixed the NamedTemporaryFile issue between 2.5 and 2.6, by allowing you to name your own tmpfile if you want to munge the contents later.
+
 * mozharness/base/script.py (BaseScript):
     Pulled all os and shell methods out to mixins.
 
